--- a/src/Styles/EditPost.css
+++ b/src/Styles/EditPost.css
@@ -10,7 +10,7 @@
     position: fixed;
     top: 0;
     width: 100vw;
-    z-index: 9999999;
+    z-index: 2;
 }
 .Edit .Edit-Message-Wrap{
     background: var(--bgColor);
@@ -21,7 +21,7 @@
     padding: 20px;
     max-width: 600px;
     width: 100%;
-    z-index: 99999999;
+    z-index: 2;
 }
 .Edit .Edit-Message-Wrap textarea{
     background: var(--bgBox);
@@ -37,7 +37,7 @@
     width: 100%;
 }
 .Edit .Invisible{
-    z-index: 9999999;
+    z-index: 1;
 }
 .Edit button.Edit{
     background: none;
@@ -49,7 +49,6 @@
     margin: 5px;
     padding: 5px;
     transition: all 0.2s ease-in-out;
-    z-index: 99999;
 }
 .Edit button.Edit:hover{
     background: var(--thirdFontColor);
