--- a/src/Styles/Login.css
+++ b/src/Styles/Login.css
@@ -7,7 +7,7 @@
     position: fixed;
     top: 0;
     width: 100vw;
-    z-index: 1;
+    z-index: 2;
 }
 .Login .Login-wrap{
     background: var(--bgBox);
@@ -17,7 +17,6 @@
                 rgba(15, 15, 15, 0.4) 0px 15px 40px;
     padding: 20px;
     width: 600px;
-    z-index: 1;
 }
 .Login .Login-wrap h3{
     margin-bottom: 30px;
